added changed color, added new images, changed some formatting.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Robert Kojima</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script type="text/javascript" src="index.js"></script>
     <script src="https://use.fontawesome.com/34a29c0043.js"></script>
     <script type="text/javascript" src="smoothscroll.js"></script>
@@ -25,101 +25,108 @@
     <section id="hero">
         <div class="hero-text">
             <h1 id="name">Robert Kojima</h1>
-            <h1 id="occupation">Full Stack Developer</h1>
+            <h1 id="occupation">Web Developer</h1>
         </div>
     </section>
     <section id="about-me">
-        <h2>About me</h2>
-        <p>I've recently graduated from the Fullstack Web Development bootcamp at Thinkful. I'm currently looking for a full stack developer position. What excites me is that there is so much to learn in the coding world; going to coding meetups had me thinking that learning is fun again. I am also starting to contribute to open source projects, such as Habitica. 
+        <h2>About</h2>
+        <p>
+            Hi, I'm a freelance technical consultant at Wizelabs, using JavaScript, React, Material-UI, and Styled Components. Currently looking for a front-end web developer position. Always excited to learn something new. Starting to contribute to open source projects, such as Habitica. 
         </p> 
     </section>
-    <h2 id="projects-header">Projects</h2>
-    <section class="projects" id="project-1">
-        <div class="project-left">
-            <div class="project-image">
-                <img id="desktop-screenshot" src="./images/line-drive-screenshot.png">
+    <section >
+        <h2 id="projects-header">Projects</h2>
+        <section class="projects" id="project-1">
+            <div class="project-left">
+                <div class="project-image">
+                    <img class="desktop-screenshot" src="./images/line-drive-screenshot.png">
+                </div>
             </div>
-        </div>
-        <div class="project-right">
-            <div class="project-info">
-                <h3 class="project-title">Line Drive Baseball</h3>
-                <p class="project-technologies">
-                    <span class="pill">React</span>
-                    <span class="pill">Express</span>
-                    <span class="pill">Node.js</span>
-                    <span class="pill">Mongoose</span>
-                    <span class="pill">Mongo</span>
-                    <span class="pill">Javascript</span>
-                    <span class="pill">HTML</span>
-                    <span class="pill">CSS</span>
-                </p>
-                <p class="project-description">A baseball card game using stats to battle. Check baseball stats of the 2016 season players, as well as the career stats from legends. Send players to battle using their strengths. 
-                </p>
+            <div class="project-right">
+                <div class="project-info">
+                    <h3 class="project-title">Line Drive Baseball</h3>
+                    <p class="project-technologies">
+                        <span class="pill">React</span>
+                        <span class="pill">Express</span>
+                        <span class="pill">Node.js</span>
+                        <span class="pill">Mongoose</span>
+                        <span class="pill">Mongo</span>
+                        <span class="pill">Javascript</span>
+                        <span class="pill">HTML</span>
+                        <span class="pill">CSS</span>
+                    </p>
+                    <p class="project-description">A baseball card game using stats to battle. Check baseball stats of the 2016 season
+                        players, as well as the career stats from legends. Send players to battle using their strengths.
+                    </p>
 
-                <div class="project-links">
-                    <a class="project-link live" href="https://line-drive-baseball.herokuapp.com">Live</a>
-                    <a class="project-link repo" href="https://github.com/rkojima/baseball-card-game">Repo</a>
-                </div>
-            </div> 
-        </div>
-    </section>
-    <section class="projects" id="project-2">
-        <div class="project-left">
-            <div class="project-image">
-                <img class="mobile-screenshot" src="./images/remember-screenshot.png">  
-            </div>
-        </div>
-        <div class="project-right">
-            <div class="project-info">
-                <h3 class="project-title">Remember</h3>
-                <p class="project-technologies"> 
-                    <span class="pill">Express</span>
-                    <span class="pill">Node.js</span> 
-                    <span class="pill">Mongoose</span>
-                    <span class="pill">Mongo</span> 
-                    <span class="pill">Javascript</span> 
-                    <span class="pill">HTML</span>
-                    <span class="pill">CSS</span>
-                </p>
-                <p class="project-description">Note taking for your books, to remember what you read. Because why read something if you're going to forget it? Put a book in your library, set a timer, and read. After the timer goes off, write down a note. Check your notes for each book in your library. 
-                </p>
-                <div class="project-links">
-                    <a class="project-link link-mobile live" href="https://remember-app-project.herokuapp.com/">Live</a>
-                    <a class="project-link link-mobile repo" href="https://github.com/rkojima/remember">Repo</a>
+                    <div class="project-links">
+                        <a class="project-link live" href="https://line-drive-baseball.herokuapp.com">Live</a>
+                        <a class="project-link repo" href="https://github.com/rkojima/baseball-card-game">Repo</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="projects" id="project-3">
-        <div class="project-left">
-            <div class="project-image">
-                <img class="mobile-screenshot" src="./images/twitch-api-screenshot.png">
-            </div>
-        </div>
-        <div class="project-right">
-            <div class="project-info">
-                <h3 class="project-title">Is Streaming?</h3>
-                <p class="project-technologies">
-                    <span class="pill">Javascript</span>
-                    <span class="pill">HTML</span>
-                    <span class="pill">CSS</span>
-                </p>
-                <p class="project-description">A single page site that uses Twitch API to check whether a searched streamer is online or not. Also shows featured streamers.
-                </p>
-                <div class="project-links">
-                    <a class="project-link link-mobile live" href="https://is-streaming.herokuapp.com/">Live</a>
-                    <a class="project-link link-mobile repo" href="https://github.com/rkojima/is-streaming">Repo</a>
+        </section>
+        <section class="projects" id="project-2">
+            <div class="project-left">
+                <div class="project-image">
+                    <img class="desktop-screenshot" src="./images/remember-screenshot-2.png">
                 </div>
-            </div>  
-        </div>
-    </section>
-    <section id="contact">
-        <h3>Let's connect!</h3>
-        <a id="email-link" href="mailto:rkojima@berkeley.edu">rkojima@berkeley.edu</a>  
-        <div class="icons">
-            <a href="https://github.com/rkojima"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/in/robert-kojima/"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
-        </div>
-    </section>
+            </div>
+            <div class="project-right">
+                <div class="project-info">
+                    <h3 class="project-title">Remember</h3>
+                    <p class="project-technologies">
+                        <span class="pill">Express</span>
+                        <span class="pill">Node.js</span>
+                        <span class="pill">Mongoose</span>
+                        <span class="pill">Mongo</span>
+                        <span class="pill">Javascript</span>
+                        <span class="pill">HTML</span>
+                        <span class="pill">CSS</span>
+                    </p>
+                    <p class="project-description">Note taking for your books, to remember what you read. Because why read something
+                        if you're going to forget it? Put a book in your library, set a timer, and read. After the timer goes off,
+                        write down a note. Check your notes for each book in your library.
+                    </p>
+                    <div class="project-links">
+                        <a class="project-link link-mobile live" href="https://remember-app-project.herokuapp.com/">Live</a>
+                        <a class="project-link link-mobile repo" href="https://github.com/rkojima/remember">Repo</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="projects" id="project-3">
+            <div class="project-left">
+                <div class="project-image">
+                    <img class="desktop-screenshot" src="./images/is-streaming-screenshot-2.png">
+                </div>
+            </div>
+            <div class="project-right">
+                <div class="project-info">
+                    <h3 class="project-title">Is Streaming?</h3>
+                    <p class="project-technologies">
+                        <span class="pill">Javascript</span>
+                        <span class="pill">HTML</span>
+                        <span class="pill">CSS</span>
+                    </p>
+                    <p class="project-description">A single page site that uses Twitch API to check whether a searched streamer is
+                        online or not. Also shows featured streamers.
+                    </p>
+                    <div class="project-links">
+                        <a class="project-link link-mobile live" href="https://is-streaming.herokuapp.com/">Live</a>
+                        <a class="project-link link-mobile repo" href="https://github.com/rkojima/is-streaming">Repo</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <h3>Let's connect!</h3>
+            <a id="email-link" href="mailto:rkojima@berkeley.edu">rkojima@berkeley.edu</a>
+            <div class="icons">
+                <a href="https://github.com/rkojima"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/robert-kojima/"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+            </div>
+        </section>
+    </section> 
 </body>
 </html>
